new file:   Docs-dev/merge_project.md 	modified:   noisemodelling-jdbc/src/main/java/org/noise_planet/noisemodelling/jdbc/output/AttenuationOutputSingleThread.java 	modified:   noisemodelling-jdbc/src/main/java/org/noise_planet/noisemodelling/jdbc/output/NoiseMapWriter.java 	new file:   noisemodelling-jdbc/src/test/java/org/noise_planet/noisemodelling/jdbc/BridgeTrafficTest.java 	modified:   noisemodelling-jdbc/src/test/java/org/noise_planet/noisemodelling/jdbc/SourceIdentificationTest.java 	new file:   noisemodelling-jdbc/src/test/resources/TutoBridge/bridgepoints.geojson 	new file:   noisemodelling-jdbc/src/test/resources/TutoBridge/buildings.geojson 	new file:   noisemodelling-jdbc/src/test/resources/TutoBridge/dem.geojson 	new file:   noisemodelling-jdbc/src/test/resources/TutoBridge/receivers.geojson 	new file:   noisemodelling-jdbc/src/test/resources/TutoBridge/roads.geojson 	modified:   noisemodelling-pathfinder/src/main/java/org/noise_planet/noisemodelling/pathfinder/BridgeAnalyzer.java 	modified:   noisemodelling-pathfinder/src/main/java/org/noise_planet/noisemodelling/pathfinder/ElevationConverter.java 	modified:   noisemodelling-pathfinder/src/main/java/org/noise_planet/noisemodelling/pathfinder/SourceCollector.java 	modified:   noisemodelling-pathfinder/src/main/java/org/noise_planet/noisemodelling/pathfinder/path/BridgeRelationship.java 	modified:   noisemodelling-pathfinder/src/main/java/org/noise_planet/noisemodelling/pathfinder/profilebuilder/BridgeGeometryBuilder.java 	modified:   noisemodelling-pathfinder/src/main/java/org/noise_planet/noisemodelling/pathfinder/profilebuilder/BridgeService.java 	deleted:    noisemodelling-pathfinder/src/main/java/org/noise_planet/noisemodelling/pathfinder/profilebuilder/CutPointBuilder.java 	modified:   noisemodelling-pathfinder/src/main/java/org/noise_planet/noisemodelling/pathfinder/profilebuilder/CutPointSource.java 	modified:   noisemodelling-pathfinder/src/main/java/org/noise_planet/noisemodelling/pathfinder/p